Adding all changes.
