# docs/API/API.yaml
@@ -1,25 +1,28 @@
 openapi: 3.0.3
 info:
-  title: Swagger Monefy - OpenAPI 3.0
+  title: Monefy API - OpenAPI 3.0
   description: |-
-    This is a sample Money Manager Server based on the OpenAPI 3.0 specification.  You can find out more about
-    Swagger at [https://swagger.io](https://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
-
-    _If you're looking for the Swagger 2.0/OAS 2.0 version of Petstore, then click [here](https://editor.swagger.io/?url=https://petstore.swagger.io/v2/swagger.yaml). Alternatively, you can load via the `Edit > Load Petstore OAS 2.0` menu option!_
+    Monefy is a personal finance management application that helps users track their income, expenses, and account balances across multiple currencies.
+    
+    This API provides comprehensive endpoints for managing:
+    - User accounts and authentication
+    - Financial accounts with multi-currency support
+    - Transaction tracking (expenses and income)
+    - Expense categories and currency management
     
     Some useful links:
     - [The Monefy repository](https://github.com/nadeem-gamal/Monefy)
     - [The source API definition for the Monefy](https://github.com/nadeem-gamal/Monefy/blob/master/docs/API/API.yaml)
-  termsOfService: http://swagger.io/terms/
+  termsOfService: https://github.com/nadeem-gamal/Monefy/blob/master/README.md
   contact:
-    email: apiteam@swagger.io
+    email: support@monefy.app
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.11
 externalDocs:
-  description: Find out more about Swagger
-  url: http://swagger.io
+  description: Find out more about Monefy
+  url: https://github.com/nadeem-gamal/Monefy
 servers:
   - url: https://localhost/api/v3
 tags:
@@ -63,8 +66,8 @@ paths:
           description: Validation exception
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:categories
+            - read:categories
     post:
       tags:
         - category
@@ -89,8 +92,8 @@ paths:
           description: Invalid input
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:categories
+            - read:categories
   /category/{categoryId}:
     get:
       tags:
@@ -120,8 +123,8 @@ paths:
       security:
         - api_key: []
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:categories
+            - read:categories
     delete:
       tags:
         - category
@@ -147,8 +150,8 @@ paths:
           description: Invalid category value
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:categories
+            - read:categories
   /category/getAll:
     get:
       tags:
@@ -167,8 +170,8 @@ paths:
                   $ref: '#/components/schemas/Category'          
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:categories
+            - read:categories
 
   /currency:
     put:
@@ -199,8 +202,8 @@ paths:
           description: Validation exception
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:currencies
+            - read:currencies
     post:
       tags:
         - currency
@@ -225,8 +228,8 @@ paths:
           description: Invalid input
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:currencies
+            - read:currencies
   /currency/{currencyId}:
     get:
       tags:
@@ -256,8 +259,8 @@ paths:
       security:
         - api_key: []
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:currencies
+            - read:currencies
     delete:
       tags:
         - currency
@@ -283,8 +286,8 @@ paths:
           description: Invalid currency value
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:currencies
+            - read:currencies
   /currency/getAll:
     get:
       tags:
@@ -303,8 +306,8 @@ paths:
                   $ref: '#/components/schemas/Currency'
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:currencies
+            - read:currencies
 
 
   /account:
@@ -336,8 +339,8 @@ paths:
           description: Validation exception
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:accounts
+            - read:accounts
     post:
       tags:
         - account
@@ -362,8 +365,8 @@ paths:
           description: Invalid input
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:accounts
+            - read:accounts
   /account/{accountId}:
     get:
       tags:
@@ -393,8 +396,8 @@ paths:
       security:
         - api_key: []
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:accounts
+            - read:accounts
     delete:
       tags:
         - account
@@ -420,8 +423,8 @@ paths:
           description: Invalid account value
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:accounts
+            - read:accounts
   /account/getAll:
     get:
       tags:
@@ -440,8 +443,8 @@ paths:
                   $ref: '#/components/schemas/Account'
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:accounts
+            - read:accounts
 
   /transaction:
     put:
@@ -472,8 +475,8 @@ paths:
           description: Validation exception
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:transactions
+            - read:transactions
     post:
       tags:
         - transaction
@@ -498,8 +501,8 @@ paths:
           description: Invalid input
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:transactions
+            - read:transactions
   /transaction/{transactionId}:
     get:
       tags:
@@ -529,8 +532,8 @@ paths:
       security:
         - api_key: []
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:transactions
+            - read:transactions
     delete:
       tags:
         - transaction
@@ -556,8 +559,8 @@ paths:
           description: Invalid transaction value
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:transactions
+            - read:transactions
   /transaction/getAll:
     get:
       tags:
@@ -576,8 +579,8 @@ paths:
                   $ref: '#/components/schemas/Transaction'          
       security:
         - monefy_auth:
-            - write:pets
-            - read:pets
+            - write:transactions
+            - read:transactions
 
   /user/signup:
     post:
@@ -620,23 +623,28 @@ paths:
         '400':
           description: Invalid email supplied
   /user/login:
-    get:
+    post:
       tags:
         - user
       summary: Login
-      description: ''
+      description: Authenticate user and return token
       operationId: login
-      parameters:
-        - name: username
-          in: header
-          required: true
-          schema:
-            type: string
-        - name: password
-          in: header
-          required: true
-          schema:
-            type: string
+      requestBody:
+        description: User credentials
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: user1
+                password:
+                  type: string
+                  example: password123
+              required:
+                - username
+                - password
       responses:
         '200':
           description: successful operation
@@ -649,7 +657,7 @@ paths:
         '404':
           description: User not found
   /user/logout:
-   get:
+    get:
       tags:
         - user
       summary: Logout
@@ -790,6 +798,11 @@ components:
           type: integer
           format: int32
           example: 1
+        account_id:
+          type: integer
+          format: int32
+          description: ID of the account this transaction belongs to
+          example: 100000
         date:
           type: string
           format: date
@@ -838,7 +851,7 @@ components:
           type: string
   requestBodies:
     Category:
-      description: Category object that needs to be added to the store
+      description: Category object that needs to be added
       content:
         application/json:
           schema:
@@ -858,8 +871,16 @@ components:
         implicit:
           authorizationUrl: https://localhost/oauth/authorize
           scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
+            write:categories: modify categories
+            read:categories: read categories
+            write:currencies: modify currencies
+            read:currencies: read currencies
+            write:accounts: modify accounts
+            read:accounts: read accounts
+            write:transactions: modify transactions
+            read:transactions: read transactions
+            write:users: modify user profile
+            read:users: read user profile
     api_key:
       type: apiKey
       name: api_key
